[gd_scene load_steps=3 format=3 uid="uid://em53dmg76c6f"]

[ext_resource type="Script" uid="uid://dkya0n1c4jdax" path="res://ui/start_menu.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bx376"]
bg_color = Color(0.6, 0.6, 1, 1)

[node name="StartMenu" type="Node3D"]
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Button" type="Button" parent="Background/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "<-"

[node name="Panel" type="Panel" parent="Background/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="Background/MarginContainer2/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -15.5
offset_right = 20.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Pick"

[node name="DisplayAnimal" type="Node3D" parent="Background/MarginContainer2/HBoxContainer/Panel"]
unique_name_in_owner = true

[node name="DisplayCaseCamera" type="Camera3D" parent="Background/MarginContainer2/HBoxContainer/Panel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.08, 0.72094)

[node name="Button2" type="Button" parent="Background/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "->"

[node name="Panel" type="Panel" parent="Background"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bx376")

[node name="MarginContainer" type="MarginContainer" parent="Background/Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 24

[node name="ButtonContainer" type="HBoxContainer" parent="Background/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="Start" type="Button" parent="Background/Panel/MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 55)
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
action_mode = 0
text = "Start"

[node name="Settings" type="Button" parent="Background/Panel/MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 55)
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
action_mode = 0
text = "Settings"

[node name="Exit" type="Button" parent="Background/Panel/MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 55)
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
action_mode = 0
text = "Exit"

[connection signal="pressed" from="Background/MarginContainer2/HBoxContainer/Button" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Background/MarginContainer2/HBoxContainer/Panel/Button" to="." method="_on_pick_pressed"]
[connection signal="pressed" from="Background/MarginContainer2/HBoxContainer/Button2" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Background/Panel/MarginContainer/ButtonContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Background/Panel/MarginContainer/ButtonContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Background/Panel/MarginContainer/ButtonContainer/Exit" to="." method="_on_exit_pressed"]
